--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@clr/icons": "2.1.2",
     "@clr/ui": "^2.1.2",
     "@webcomponents/custom-elements": "^1.0.0",
+    "chart.js": "^2.8.0",
     "firebase": "^6.5.0",
+    "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
